--- a/styles.css
+++ b/styles.css
@@ -227,11 +227,11 @@ body {
 	.main__text {
     max-width: 96%;
 	}
-	.main__title1 {
+	.main__title-bali {
     padding-top: 3px;
     font: bold 45.3vw PT Serif, serif;
 	}
-	.main__title2 {
+	.main__title-indonesia {
     margin: -76px 0 37px 60px;
     font: bold 16vw PT Serif, serif;
 	}
